--- a/package.json
+++ b/package.json
@@ -7,15 +7,21 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "format": "prettier --write **/**/*.{js,json}"
   },
   "dependencies": {
+    "bip39": "^3.0.4",
+    "crypto-random-string": "^4.0.0",
+    "ethers": "^5.5.2",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "react-native-web": "0.17.1"
+    "react-native-web": "0.17.1",
+    "styled-components": "^5.3.3",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
