--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "eject": "expo eject",
-    "format": "prettier --write **/**/*.{js,json}"
+    "format": "prettier --write **/**/*.{js,json} && eslint --fix"
   },
   "dependencies": {
     "bip39": "^3.0.4",
@@ -16,6 +16,7 @@
     "ethers": "^5.5.2",
     "expo": "~43.0.2",
     "expo-status-bar": "~1.1.0",
+    "node-libs-browser": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
@@ -26,6 +27,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.9",
     "eslint": "^7.32.0",
+    "eslint-cli": "^1.1.1",
     "eslint-config-standard": "^16.0.3",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-node": "^11.1.0",
