--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
+    "@types/styled-components": "^5.1.17",
+    "@types/styled-components-react-native": "^5.1.3",
     "eslint": "^7.32.0",
     "eslint-cli": "^1.1.1",
     "eslint-config-standard": "^16.0.3",
