--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "crypto-random-string": "^4.0.0",
     "ethers": "^5.5.2",
     "expo": "~43.0.2",
+    "expo-app-loading": "~1.2.1",
     "expo-status-bar": "~1.1.0",
     "node-libs-browser": "^2.2.1",
     "react": "17.0.1",
