--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
     "bip39": "^3.0.4",
+    "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.5.2",
     "expo": "~43.0.2",
     "expo-random": "^12.1.1",
