fixed app slug validation issue

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "dogecoin2.0-core-wallet",
-    "slug": "dogecoin2.0-core-wallet",
+    "name": "dogecoin2dot0-core-wallet",
+    "slug": "dogecoin2point0-core-wallet",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
