--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "dependencies": {
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
+    "@react-navigation/native": "^6.0.6",
+    "@react-navigation/native-stack": "^6.2.5",
     "bip39": "^3.0.4",
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.5.2",
