--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "format": "prettier --write **/**/*.{js,json} && eslint --fix"
   },
   "dependencies": {
+    "@expo-google-fonts/red-hat-display": "^0.2.0",
+    "@gorhom/portal": "^1.0.11",
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
-    "@expo-google-fonts/red-hat-display": "^0.2.0",
     "bip39": "^3.0.4",
     "ethereumjs-tx": "^2.1.2",
     "ethers": "^5.5.2",
@@ -27,10 +28,12 @@
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
-    "styled-components": "^5.3.3",
-    "web3": "^1.6.1",
+    "react-native-gesture-handler": "~1.10.2",
+    "react-native-modalize": "^2.0.13",
+    "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-safe-area-context": "3.3.2"
+    "styled-components": "^5.3.3",
+    "web3": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
