--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ethers": "^5.5.2",
     "expo": "~43.0.2",
     "expo-app-loading": "~1.2.1",
+    "expo-blur": "~10.0.3",
     "expo-font": "~10.0.3",
     "expo-status-bar": "~1.1.0",
     "lodash": "^4.17.21",
