--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -15,7 +15,7 @@
   "plugins": ["react", "react-native"],
   "rules": {
     "linebreak-style": ["error", "unix"],
-    "quotes": ["error", "double"],
+    "quotes": ["error", "single"],
     "semi": ["error", "always"],
     "react-native/no-unused-styles": 2, // disallow unused styles
     "react-native/no-inline-styles": 2, // disallow styles declared within the component itself
