--- a/.prettierrc
+++ b/.prettierrc
@@ -3,6 +3,6 @@
   "tabWidth": 2,
   "printWidth": 120,
   "semi": true,
-  "singleQuote": false,
+  "singleQuote": true,
   "trailingComma": "none"
 }
