--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write **/**/*.{js,json} && eslint --fix"
   },
   "dependencies": {
+    "@ethersproject/shims": "^5.5.0",
     "@expo-google-fonts/red-hat-display": "^0.2.0",
     "@gorhom/portal": "^1.0.11",
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
@@ -31,6 +32,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-get-random-values": "^1.7.2",
     "react-native-modalize": "^2.0.13",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
