--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
     "react-redux": "^7.2.6",
+    "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
     "web3": "^1.6.1"
   },
