--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write **/**/*.{js,json} && eslint --fix"
   },
   "dependencies": {
+    "@ethersproject/abi": "^5.5.0",
     "@ethersproject/shims": "^5.5.0",
     "@expo-google-fonts/red-hat-display": "^0.2.0",
     "@gorhom/portal": "^1.0.11",
@@ -37,6 +38,7 @@
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
+    "react-native-sweet-alert": "^3.5.0",
     "react-redux": "^7.2.6",
     "socket.io-client": "^4.4.1",
     "styled-components": "^5.3.3",
