--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "expo-blur": "~10.0.3",
     "expo-clipboard": "^2.1.1",
     "expo-font": "~10.0.3",
+    "expo-sharing": "^10.1.1",
     "expo-status-bar": "~1.1.0",
     "jsbi": "^4.1.0",
     "lodash": "^4.17.21",
