--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ethersproject/shims": "^5.5.0",
     "@ethersproject/wallet": "^5.5.0",
     "@expo-google-fonts/red-hat-display": "^0.2.0",
+    "@gorhom/bottom-sheet": "^4.1.5",
     "@gorhom/portal": "^1.0.11",
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
     "@react-navigation/bottom-tabs": "^6.2.0",
@@ -39,10 +40,11 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-expo-fancy-alerts": "^2.1.0",
-    "react-native-gesture-handler": "~1.10.2",
+    "react-native-gesture-handler": "~1.10.2",    
     "react-native-get-random-values": "^1.7.2",
     "react-native-modalize": "^2.0.13",
     "react-native-qrcode-svg": "^6.1.2",
+    "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
     "react-native-svg": "12.1.1",
