--- a/package.json
+++ b/package.json
@@ -33,14 +33,16 @@
     "expo-font": "~10.0.3",
     "expo-sharing": "^10.1.1",
     "expo-status-bar": "~1.1.0",
+    "isaac": "^0.0.5",
     "jsbi": "^4.1.0",
     "lodash": "^4.17.21",
     "node-libs-browser": "^2.2.1",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-bcrypt": "^2.4.0",
     "react-native-expo-fancy-alerts": "^2.1.0",
-    "react-native-gesture-handler": "~1.10.2",    
+    "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.2",
     "react-native-modalize": "^2.0.13",
     "react-native-qrcode-svg": "^6.1.2",
