--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@expo-google-fonts/red-hat-display": "^0.2.0",
     "@gorhom/bottom-sheet": "^4.1.5",
     "@gorhom/portal": "^1.0.11",
+    "@react-native-async-storage/async-storage": "^1.16.1",
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.6",
@@ -55,6 +56,7 @@
     "socket.io-client": "^4.4.1",
     "stream": "^0.0.2",
     "styled-components": "^5.3.3",
+    "uuid": "^8.3.2",
     "web3": "^1.6.1"
   },
   "devDependencies": {
