--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write **/**/*.{js,json} && eslint --fix"
   },
   "dependencies": {
+    "@ethereumjs/common": "^2.6.2",
     "@ethereumjs/tx": "^3.5.0",
     "@ethersproject/abi": "^5.5.0",
     "@ethersproject/shims": "^5.5.0",
