--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -11,11 +11,14 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 14.x
-      - uses: expo/expo-github-action@v6
+          node-version: 16.x
+          cache: npm
+      - uses: expo/expo-github-action@v7
         with:
           expo-version: 4.x
+          eas-version: latest
           expo-cache: true
           token: ${{ secrets.EXPO_TOKEN }}
       - run: yarn install
-      - run: expo publish
+      - run: eas build:configure
+      - run: eas build --platform all --non-interactive
