update ci to build for android alone

--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -20,4 +20,4 @@ jobs:
           expo-cache: true
           token: ${{ secrets.EXPO_TOKEN }}
       - run: yarn install
-      - run: eas build --platform all --non-interactive
+      - run: eas build --platform android --non-interactive
