--- a/app.json
+++ b/app.json
@@ -16,11 +16,11 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "org.doge2.wallet",
+      "bundleIdentifier": "org.dogetwo.wallet",
       "buildNumber": "1.0.0"
     },
     "android": {
-      "package": "org.doge2.wallet",
+      "package": "org.dogetwo.wallet",
       "versionCode": 1
     },
     "web": {
