--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "org.dogetwo.wallet",
+      "bundleIdentifier": "org.dogecointwo.wallet",
       "buildNumber": "1.0.0"
     },
     "android": {
