--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
     "@ethereumjs/common": "^2.6.2",
     "@ethereumjs/tx": "^3.5.0",
     "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/hdnode": "^5.6.2",
+    "@ethersproject/random": "^5.6.1",
     "@ethersproject/shims": "^5.5.0",
+    "@ethersproject/units": "^5.6.1",
     "@ethersproject/wallet": "^5.5.0",
     "@expo-google-fonts/red-hat-display": "^0.2.0",
     "@gorhom/bottom-sheet": "^4.1.5",
@@ -25,6 +28,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@reduxjs/toolkit": "^1.7.1",
+    "axios": "^0.27.2",
     "bip39": "^3.0.4",
     "eth-address": "^1.0.1",
     "ethers": "^5.5.2",
