--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
     "react-native-bcrypt": "^2.4.0",
+    "react-native-charts-wrapper": "^0.5.9",
     "react-native-expo-fancy-alerts": "^2.1.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-get-random-values": "^1.7.2",
@@ -58,7 +59,7 @@
     "react-native-reanimated": "^2.4.1",
     "react-native-safe-area-context": "3.3.2",
     "react-native-screens": "~3.8.0",
-    "react-native-svg": "12.1.1",
+    "react-native-svg": "^12.4.3",
     "react-native-sweet-alert": "^3.5.0",
     "react-redux": "^7.2.6",
     "socket.io-client": "^4.4.1",
