--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "expo-font": "~10.0.3",
     "expo-sharing": "^10.1.1",
     "expo-status-bar": "~1.1.0",
+    "immutability-helper": "^3.1.1",
     "isaac": "^0.0.5",
     "jsbi": "^4.1.0",
     "lodash": "^4.17.21",
@@ -61,6 +62,7 @@
     "react-native-screens": "~3.8.0",
     "react-native-svg": "^12.4.3",
     "react-native-sweet-alert": "^3.5.0",
+    "react-native-wagmi-charts": "^2.1.0",
     "react-redux": "^7.2.6",
     "socket.io-client": "^4.4.1",
     "stream": "^0.0.2",
