--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "@expo-google-fonts/red-hat-display": "^0.2.0",
     "@gorhom/bottom-sheet": "^4.1.5",
     "@gorhom/portal": "^1.0.11",
-    "@react-native-async-storage/async-storage": "^1.16.1",
+    "@react-native-async-storage/async-storage": "~1.17.3",
+    "@react-native-community/datetimepicker": "6.2.0",
     "@react-native-cryptocurrencies/bip39": "^3.1.5",
     "@react-navigation/bottom-tabs": "^6.2.0",
     "@react-navigation/native": "^6.0.6",
@@ -32,35 +33,35 @@
     "bip39": "^3.0.4",
     "eth-address": "^1.0.1",
     "ethers": "^5.5.2",
-    "expo": "~43.0.2",
-    "expo-app-loading": "~1.2.1",
-    "expo-barcode-scanner": "~11.1.2",
-    "expo-blur": "~10.0.3",
-    "expo-camera": "^12.1.2",
-    "expo-clipboard": "^2.1.1",
-    "expo-font": "~10.0.3",
-    "expo-sharing": "^10.1.1",
-    "expo-status-bar": "~1.1.0",
+    "expo": "^46.0.6",
+    "expo-app-loading": "~2.1.0",
+    "expo-barcode-scanner": "~11.4.0",
+    "expo-blur": "~11.2.0",
+    "expo-camera": "~12.3.0",
+    "expo-clipboard": "~3.1.0",
+    "expo-font": "~10.2.0",
+    "expo-sharing": "~10.3.0",
+    "expo-status-bar": "~1.4.0",
     "immutability-helper": "^3.1.1",
     "isaac": "^0.0.5",
     "jsbi": "^4.1.0",
     "lodash": "^4.17.21",
     "node-libs-browser": "^2.2.1",
-    "react": "17.0.1",
-    "react-dom": "17.0.1",
-    "react-native": "0.64.3",
+    "react": "18.0.0",
+    "react-dom": "18.0.0",
+    "react-native": "0.69.4",
     "react-native-bcrypt": "^2.4.0",
     "react-native-charts-wrapper": "^0.5.9",
     "react-native-expo-fancy-alerts": "^2.1.0",
-    "react-native-gesture-handler": "~1.10.2",
-    "react-native-get-random-values": "^1.7.2",
+    "react-native-gesture-handler": "~2.5.0",
+    "react-native-get-random-values": "~1.8.0",
     "react-native-hyperlink": "^0.0.19",
-    "react-native-modalize": "^2.0.13",
+    "react-native-modalize": "^2.1.1",
     "react-native-qrcode-svg": "^6.1.2",
-    "react-native-reanimated": "^2.4.1",
-    "react-native-safe-area-context": "3.3.2",
-    "react-native-screens": "~3.8.0",
-    "react-native-svg": "^12.4.3",
+    "react-native-reanimated": "~2.9.1",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-svg": "12.3.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-wagmi-charts": "^2.1.0",
     "react-redux": "^7.2.6",
