--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@ethereumjs/common": "^2.6.2",
     "@ethereumjs/tx": "^3.5.0",
     "@ethersproject/abi": "^5.5.0",
+    "@ethersproject/constants": "^5.6.1",
     "@ethersproject/hdnode": "^5.6.2",
     "@ethersproject/random": "^5.6.1",
     "@ethersproject/shims": "^5.5.0",
     "@ethersproject/units": "^5.6.1",
     "@ethersproject/wallet": "^5.5.0",
     "@expo-google-fonts/red-hat-display": "^0.2.0",
+    "@expo/webpack-config": "^0.17.0",
     "@gorhom/bottom-sheet": "^4.1.5",
     "@gorhom/portal": "^1.0.11",
     "@react-native-async-storage/async-storage": "~1.17.3",
@@ -52,6 +54,7 @@
     "react-native": "0.69.4",
     "react-native-bcrypt": "^2.4.0",
     "react-native-charts-wrapper": "^0.5.9",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-expo-fancy-alerts": "^2.1.0",
     "react-native-gesture-handler": "~2.5.0",
     "react-native-get-random-values": "~1.8.0",
@@ -64,6 +67,7 @@
     "react-native-svg": "12.3.0",
     "react-native-sweet-alert": "^3.5.0",
     "react-native-wagmi-charts": "^2.1.0",
+    "react-native-web": "~0.18.7",
     "react-redux": "^7.2.6",
     "socket.io-client": "^4.4.1",
     "stream": "^0.0.2",
