--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "expo-camera": "~12.3.0",
     "expo-clipboard": "~3.1.0",
     "expo-font": "~10.2.0",
+    "expo-screen-capture": "~4.3.0",
     "expo-sharing": "~10.3.0",
     "expo-status-bar": "~1.4.0",
     "immutability-helper": "^3.1.1",
