--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -16,9 +16,8 @@ jobs:
       - uses: expo/expo-github-action@v7
         with:
           expo-version: 4.x
+          eas-version: latest
           expo-cache: true
           token: ${{ secrets.EXPO_TOKEN }}
-      - run: npm install --location=global eas-cli
       - run: yarn install
-      - run: eas build:configure
       - run: eas build -p android --profile preview
