--- a/.github/workflows/expo.yml
+++ b/.github/workflows/expo.yml
@@ -21,3 +21,4 @@ jobs:
           token: ${{ secrets.EXPO_TOKEN }}
       - run: yarn install
       - run: eas build -p android --profile preview
+      - run: eas build -p android --profile testing
